# mock-wrappers

./: .gitignore  CMakeLists.txt  sonar-project.properties
.github/workflows/: sonarcloud.yml
include/: linalg.h
src/: linalg.c
test/: CMakeLists.txt  dot.cc
